--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -74,10 +74,9 @@
     const countData = data.reduce((obj, instance) => {
       if (!obj[instance]) {
         obj[instance] = 0;
-      } else {
-        obj[instance]++;
-        return obj
-      }
+      } 
+      obj[instance]++;
+      return obj;
     }, {})
     console.log(countData);
   </script>
