--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,8 +15,38 @@
     </ul>
   </form>
 <script>
+const cities = [];
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+fetch(endpoint)
+  .then(blob=> blob.json())
+  .then(data=> data.forEach(city=>{cities.push(city)}));
 
+function findMatches(wordToMatch, cities) {
+  return cities.filter(place=>{
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex);
+  })
+}
+
+function populateResults(input){
+  const matches = findMatches(input, cities)
+  const html = matches.map(place=>{
+    const regex = new RegExp(input, 'gi')
+    const placeName = place.city.replace(regex, `<span class="hl">${input.match(regex)}</span>`)
+    const stateName = place.state.replace(regex, `<span class="hl">${input.match(regex)}</span>`)
+    return `
+    <li>
+      <span class="name">${placeName}, ${stateName}</span>
+      <span class="population">${place.population}</span>
+    </li>
+    `;
+  }).join('');
+  suggestions.innerHTML = html
+}
+
+const suggestions = document.querySelector('.suggestions');
+const searchInput = document.querySelector('.search');
+searchInput.addEventListener('input', (event)=> populateResults(searchInput.value));
 </script>
 </body>
 </html>
