--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,6 +96,25 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]')
+  
+  function handleCheck(e) {
+    let checkedIndexes = new Array;
+    if (e.shiftKey && this.checked) {
+      checkboxes.forEach((checkbox, index) =>{
+        if (checkbox.checked) checkedIndexes.push(index);
+      });
+      let max = Math.max(...checkedIndexes);
+      let min = Math.min(...checkedIndexes);
+      if (max != min) {
+        let range = Array.from(checkboxes).slice(min, max + 1);
+        range.forEach(checkbox=> checkbox.checked = true );
+      }
+    }
+  }
+  checkboxes.forEach(checkbox=>{
+    checkbox.addEventListener("click", handleCheck);
+  });
 </script>
 </body>
 </html>
